Fixed the issue with photos being cropped, changed the icon of the view photo link and changed the button text on the update page to be more clear to the user.

--- a/flickrModule/f.css
+++ b/flickrModule/f.css
@@ -1,7 +1,7 @@
 .flex-photo {
   position: relative;
   padding-top: 25px;
-  padding-bottom: 67.5%;
+  padding-bottom: 300px;
   height: 0;
   margin-bottom: 16px;
   overflow: hidden;
@@ -9,6 +9,7 @@
   text-align: center;
   margin: 0 auto;
 }
+
 
 .flex-photo iframe, iframe {
   position: absolute;
